--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -27,8 +27,8 @@ Given no command line option, PerM will try to open a default configuration file
 = Test Data =
 === Reference ===
   #The anthracis.fasta can be download in SOCS webpage: [http://socs.biology.gatech.edu/Download.html] 
-  #The repeated masked and non-masked human genome can be downloaded from UCSC's website: [http://hgdownload.cse.ucsc.edu/goldenPath/hg18/bigZips]. With file chromFaMasked.zip   and chromFa.zip respectively. I rename the *.fa file to *.fasta file manually. 
-
+  #The repeated masked and non-masked human genome can be downloaded from UCSC's genome browser website with file chromFaMasked.zip and chromFa.zip respectively:
+  [http://hgdownload.cse.ucsc.edu/goldenPath/hg18/bigZips]. \*.fa files are rename the *.fa file to *.fasta file manually. 
 === Reads file ===
 We used real SOLiD data down from SOCS page and the simulated data gen
 
