--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -22,13 +22,25 @@ Ex: {{{./PerM_P anthracis.fasta 7B.csfasta 25}}}
 == The configuration file ==  
 Given no command line option, PerM will try to open a default configuration file name "config.pref". Given only one command line option, it should be the name of the configuration file. The format is described as the examples:
 {{{
+anthracis.fasta
+7B.csfasta
+#DummyQualitySCORE
+output.txt
+25
+10000
+1
+false
+1
+0
 }}}
+which is attached with the code tar ball. The first two are the *Reference* and *Read file*. The fifth row are the full sensitive threshold. The reads are used by the preprocessed reads version only. 
 
 = Test Data =
 === Reference ===
   * The anthracis.fasta can be download in SOCS webpage: [http://socs.biology.gatech.edu/Download.html] 
   * The repeated masked and non-masked human genome can be downloaded from UCSC's genome browser website with file chromFaMasked.zip and chromFa.zip respectively:  [http://hgdownload.cse.ucsc.edu/goldenPath/hg18/bigZips]. `*`.fa files are rename to `*`.fasta file manually. 
 === Reads file ===
-We used real SOLiD data down from SOCS page and the simulated data gen
+We used real SOLiD data down from SOCS page which can be downloaded from [http://socs.biology.gatech.edu/Download.html]. The simulated SOLiD or Solexa reads can be generated using the small program in the download section. 
+
 
 Changes are expected in the near future for I/O and options standardization with other mapper, especially Applied Biosystems pipeline.
