Edited wiki page through web user interface.

--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -1,3 +1,4 @@
+#labels Featured
 = Options =
 PerM uses both configuration file and command line options. The input files and configuration files should be put beside the program.
 
@@ -34,13 +35,5 @@ false
 0
 }}}
 The first two rows are the *Reference* and *Read file*. The fifth row shows the full sensitive threshold. The rest parameters are used by the preprocessed reads version only. 
-
-= Test Data =
-=== Reference ===
-  * The anthracis.fasta can be download in SOCS webpage: [http://socs.biology.gatech.edu/Download.html] 
-  * The repeated masked and non-masked human genome can be downloaded from UCSC's genome browser website with file chromFaMasked.zip and chromFa.zip respectively:  [http://hgdownload.cse.ucsc.edu/goldenPath/hg18/bigZips]. `*`.fa files are rename to `*`.fasta file manually. 
-=== Reads file ===
-We used real SOLiD data down from SOCS page which can be downloaded from [http://socs.biology.gatech.edu/Download.html]. The simulated SOLiD or Solexa reads can be generated using the small program in the download section. 
-
 
 Changes are expected in the near future for I/O and options standardization with other mapper, especially Applied Biosystems pipeline.
