--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -35,12 +35,17 @@ false
 1
 0
 }}}
-The first two rows are the *Reference* and *Read file*. The fifth row shows the full sensitive threshold. The rest parameters are used by the preprocessed reads version only. 
+The first two rows are the *Reference* and *Read file* respectively. The fifth row shows the full sensitive threshold. The rest parameters are used by the preprocessed reads version only. 
 
 =OUTPUT=
 ==Index==
+In the first time of mapping reads to a reference genome, PerM will create and save the index of the reference for future reuse. Make sure your computer has enough memory and disk quota, even PerM uses only 4.5 bytes per bases on the reference genome. If you want PerM to build the index again, simply delete the index on disk. 
 ==Mapping Results==
-====Solexa Reads ====
+The mapping result will be stored in a `*`.mapping file with name corresponding to the reference and read files. By default, it only outputs the non-ambiguous mapping in terms of number of mismatches, so each row is a reads with its unique mapping. The format of the reads is as follows
 ====SOLiD Reads ====
+
+====Solexa Reads ====
+
+
 
 Changes are expected in the near future for I/O and options standardization with other mapper, especially Applied Biosystems pipeline.
