--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -3,7 +3,7 @@
 PerM uses both configuration file and command line options. The input files and configuration files should be put beside the program.
 
 == The command line options ==  
-The currently command line options are required to be in the order as follows:
+The command line options should be as follows:
   # A reference in .fasta file or a .txt which has many fasta file names, each in a row. 
   # The reads file in .fasta, .prb or .csfasta formats or a .txt file as the list of those files.
   # The full sensitivity threshold.
