--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -11,7 +11,7 @@ The command line options should be as follows:
   * Ex: {{{./PerM_P anthracis.fasta 7B.csfasta 3}}}
   * Ex: {{{./PerM_P HumanGenome.txt IlluminaReadSim2.txt 2}}}
 ====Reference====
-Be careful about the number of references in the list. Because PerM concatenates all input file names to generate the output file name, the output file name could be longer then the O/S limit, say 256 characters. If this happens, try to rename and limit the length of reference files' names. 
+Because PerM concatenates all input file names to generate the output file name, the output file name could be longer then the OS limit, say 256 characters. If this happens, rename and limit the length of reference files.
 
 ====Reads file====
 PerM expects reads are all from SOLiD or all from Solexa sequencer. If the first read file has the filename extension ".csfasta", PerM expects all reads are from SOLiD. PerM expects all reads have the same length, which is detected automatically using the first read in the first read file by PerM.
