--- a/wiki/Usage.wiki
+++ b/wiki/Usage.wiki
@@ -1,32 +1,34 @@
 #labels Featured
 = Options =
-PerM uses both configuration file and command line options. The input files and configuration files should be put beside the program.
+PerM uses both a configuration file and command line options. The input and configuration files should be in the same path.  
 
-== The command line options ==  
-The command line options should be as follows:
-  # A reference in .fasta file or a .txt which has many fasta file names, each in a row. 
-  # The reads file in .fasta, .prb or .csfasta formats or a .txt file as the list of those files.
-  # The full sensitivity threshold.
+== Command Line Options ==  
+The command line options include a reference, a data set, and sensitivity threshold. They should be listed in the the following order: 
+  # Reference File in FASTA format or a text file which lists many consecutive FASTA files.  
+  # A read set in FASTA, PRB or CFSATA format or a text file which lists many read sets.  
+  # An integer for the mapping sensitivity (ie. full sensitivity to 3 mismatches)
 
   * Ex: {{{./PerM_P anthracis.fasta 7B.csfasta 3}}}
   * Ex: {{{./PerM_P HumanGenome.txt IlluminaReadSim2.txt 2}}}
-====Reference====
-Because PerM concatenates all input file names to generate the output file name, the output file name could be longer then the OS limit, say 256 characters. If this happens, rename and limit the length of reference files.
+====Reference Files====
+PerM concatenates all input file names to generate the output file name.  If this causes  the length of the output file name to exceed the OS limit, rename and limit the length of the reference file names.
 
-====Reads file====
-PerM expects reads are all from SOLiD or all from Solexa sequencers. If the first read file has the file name extension ".csfasta", PerM expects all reads are from SOLiD. PerM expects all reads have the same length as the first read in the first read set.
+====Read Files====
+PerM expects from either the SOLiD or Solexa sequencer. If the first read file has the  extension ".csfasta", then all reads are assumed to be from the SOLiD sequencer. Other file types are treated as Solexa data.  Read lengths are assumed to be equal to the first read in the first data file.
 
-====Full sensitivity threshold====
-PerM support normal full sensitivity including 2, 3, 4 mismatches. For the special threshold of SOLiD, "one color + one base", *25* is used as the input parameter. For the special threshold of SOLiD, "Two base", *33* is used as the input parameter.   
+
+====Full Sensitivity Thresholds====
+PerM supports full sensitivity for 2, 3, or 4 mismatches as well as sensitivity thresholds specific to the SOLiD sequencer which changes consecutive colors in the presence of a SNP.  The SOLiD specific sensitivity thresholds of  "one SNP candidate + 1 color error" and "two SNP candidates" are denoted as *25* and *33*. 
+  
 Ex: {{{./PerM_P anthracis.fasta 7B.csfasta 25}}}
 
-== The configuration file ==  
-Given no command line option, PerM will try to open a default configuration file name "config.pref". Given only one command line option, it should be the name of the configuration file. The follow is the examples, as an attached with the code tar-ball :
+== Configuration File ==  
+A configuration file can be given as the only command line option. If no command line options are given PerM will attempt to open the default configuration file,  "config.pref". Following is an example of a configuration file as an attached zip file:
 {{{
 anthracis.fasta
 7B.csfasta
-#DummyQualitySCORE
-output.txt
+#Dummy-line
+#Dummy-line
 25
 10000
 1
@@ -34,21 +36,21 @@ false
 1
 0
 }}}
-The first two rows are the *Reference* and *Read file*. The fifth row shows the full sensitive threshold. The rest parameters are used by the preprocessed reads version only. 
+The first two rows are the *Reference* and *Read file*. The third and fourth rows are dummy lines while the fifth provides the sensitivity threshold.  The sixth through tenth line are relevant only for the read-processing version.    
 
 =OUTPUT=
-The summary of the mapping are printed out on the screen directly, including the number of reads mapped within the number of mismatches and the running time of each steps.
+The summary of the mapping results are printed directly to the screen. They include the  number of reads mapped with each number of mismatches and the running time of each step.
 ==Index==
-The genome-preprocessed version will save the index of the reference by default. It needs 4.5 bytes (one integer + 4 bits) + 256M memory to do the mapping. Make sure the memory and disk has enough capacity.
+The genome-preprocessing version saves the reference index by default. It requires 4.5 bytes (one integer + 4 bits) + 256M memory for mapping. As always, the memory and disk should have enough capacity.
 ==Mapping Results==
-The result of mapping are printed in a `*`.mapping file with name corresponding to the reference and reads. By default, the output includes non-ambiguous reads only. Each lines is the result of a best mapping in terms of number of mismatches. The info of each line is in the following orders:
+The mapping results are printed in a `*`.mapping file which is named by concatenating the input files. By Default, the output includes non-ambiguous reads only. Each line is the result of the best mapping (fewest mismatches) The info in each line is read in the following order:
   * ReadID (the order of the read in the read set)
-  * The reads. For SOLiD reads, the first base from the agent (not in the reference) is eliminated from display. The first color signal is translated into a base for display.
-  * Chromosome ID (start from 0 and is numbered according to the order in the reference list.
-  * Chromosome Locus ID (start from 0 and the first position of each chromosome. 
-  * The mapped reference region. For SOLiD reads, this region is translated into colors to compared with reads.
+  * The read sequence. For SOLiD reads, the first base from the agent (not in the reference) is eliminated from display. The first color signal is translated into a base for display.
+  * Chromosome ID (begins at 0 and numbered according to the order in the reference list)
+  * Chromosome Locus ID (the first position in each chromosome begins at 0) 
+  * The mapped reference sequence. For SOLiD reads, this region is translated into colors for comparison to the read.
   * Positive (forward) or negative (backward) strand that the reads mapped to.
   * Number of mismatches in the mapping. 
 
 
-Changes are expected in the near future for I/O and options standardization with other mapper, especially Applied Biosystems pipeline.
+Changes are expected in the near future for I/O and options standardization with other mapping programs, especially Applied Biosystems pipeline.
